--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             padding-top: 8px;
             padding-left: 70px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+            width: auto;
         }
         .form-inline .input-group {
             width: 400px;
@@ -134,7 +135,7 @@
             justify-content: center;
             box-sizing: border-box;
             margin: 0;
-            position: relative; /* Relative positioning for the triangle */
+            position: relative; 
         }
         .rotated-text-container {
             position: relative;
@@ -170,7 +171,19 @@
             justify-content: center;
             margin-top: 10px;
         }
-
+        .small-banner-row {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+            overflow: hidden;
+        }
+        .small-banner-row img {
+            flex: 1;
+            width: 80%;
+            max-width: 290px; 
+            margin: 0 8px; 
+        }
+        
     </style>
 </head>
 <body>
@@ -242,6 +255,17 @@
 
 <div class="banner2">
     <img src="https://assets.myntassets.com/w_980,c_limit,fl_progressive,dpr_2.0/assets/images/2024/6/29/1e6355e9-3378-4bd2-8e89-b204fa8795681719638966218-Crazy-Deals.jpg" alt="First Banner">
+</div>
+<div class="small-banner-row">
+    <img src="https://assets.myntassets.com/f_webp,w_196,c_limit,fl_progressive,dpr_2.0/assets/images/2024/7/23/c6ffd265-fe8e-4355-9eec-3eb390406a161721730989822-Card_14.png" alt="Card 14">
+    <img src="https://assets.myntassets.com/f_webp,w_196,c_limit,fl_progressive,dpr_2.0/assets/images/2024/7/23/100625b9-a71d-4722-b9ca-d62bfed9c1dd1721730988534-Card_15.png" alt="Card 15">
+    <img src="https://assets.myntassets.com/f_webp,w_196,c_limit,fl_progressive,dpr_2.0/assets/images/2024/7/23/13f52f5b-7bf9-46da-bdb2-836a838013dd1721730989057-Card_16.png" alt="Card 16">
+    <img src="https://assets.myntassets.com/f_webp,w_196,c_limit,fl_progressive,dpr_2.0/assets/images/2024/7/23/0b1b1de5-c5d5-4f77-81c5-5dc3980219d81721730988641-Card_17.png" alt="Card 17">
+    <img src="https://assets.myntassets.com/f_webp,w_196,c_limit,fl_progressive,dpr_2.0/assets/images/2024/7/23/6cc45c3b-a673-4acb-8702-5168d1fd35ff1721730989859-Card_23.png" alt="Card 23">
+</div>
+<br/><br/>
+<div class="banner">
+    <img src="https://assets.myntassets.com/w_980,c_limit,fl_progressive,dpr_2.0/assets/images/2024/6/28/37fcd37a-16f3-4d0b-94dc-b2b7fbe3dd631719556246029-Shop-By-Category.jpg" alt="First Banner">
 </div>
 
 <div class="notification-container">
